Fixing spacing at bottom of screen for scoring-reminder.

--- a/public/css/style.less
+++ b/public/css/style.less
@@ -613,6 +613,7 @@ span.enemy {
 
 #scoring {
 	clear: both;
+	padding-bottom: 150px;
 	
 	h4 {
 		color: #808080;
